# russh

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASE.md
.beads/: .beads-credential-key  config.yaml  interactions.jsonl  last-touched  metadata.json
.beads/backup/: backup_state.json  manifest
.beads/dolt/: .beads-credential-key
.beads/embeddeddolt/hq/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.github/workflows/: lint.yml  publish.yml  release.yml  test.yml
docs/: commands.md  configuration.md  getting-started.md  jump-hosts.md  procedures.md
documentation/: 001-ARCHITECTURE.md  100-Version-0.0.1-DOD.md
documentation/ADRs/: 0001-BaseSystem.md
examples/: config.toml  procedures.toml
russh-cli/: Cargo.toml  README.md
russh-cli/src/: main.rs
russh-cli/src/commands/: check.rs  connect.rs  copy.rs  deploy.rs  edit.rs  exec.rs  export.rs  init_config.rs  insert.rs  list.rs  menu.rs  mod.rs  show.rs  version.rs
russh-cli/src/commands/proc/: check.rs  edit.rs  export.rs  insert.rs  list.rs  mod.rs  run.rs  show.rs
russh-cli/src/ui/: inquire.rs  mod.rs
russh-cli/tests/: cli.rs
russh-cli/tests/fixtures/: procedures.toml  three_sessions.toml
russh-core/: Cargo.toml  README.md
russh-core/src/: config.rs  lib.rs  model.rs  paths.rs  proc_config.rs  proc_run.rs  resolve.rs  ssh.rs  sync.rs  validate.rs
