[package]
name = "russh-cli"
version = "1.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "CLI tool for managing and connecting to SSH sessions"
repository = "https://github.com/lacrioque/russh"
readme = "README.md"

[[bin]]
name = "russh"
path = "src/main.rs"

[dependencies]
russh-core = { path = "../russh-core", version = "1.1.0" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs-next = "2"
inquire = "0.7"
tabled = "0.17"
toml_edit = "0.25.11"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
