[package]
name = "russh-core"
version = "1.0.2"
edition = "2021"
license = "GPL-3.0-only"
description = "Core SSH session management library — config, resolution, validation, and command building"
repository = "https://github.com/lacrioque/russh"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
